--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="XYZReader">XYZ Reader</string>
     <string name="Capstone">Capstone</string>
 
-    <color name="Blue">#3AF1FC</color>
+    <color name="Blue">#00A4B2</color>
     <color name="Orange1">#FFF400</color>
     <color name="Orange2">#FFC400</color>
     <color name="Orange3">#FF9400</color>
